Updated README.me and images.

--- a/scss/dnedigital.scss
+++ b/scss/dnedigital.scss
@@ -141,7 +141,7 @@ a {
   text-align: center;
 
   color: white;
-  background: url('https://raw.githubusercontent.com/mmnavarr/dnedigital/master/pic1.jpg') no-repeat bottom center scroll;
+  background: url('../img/buildings_bg3.png') no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -203,7 +203,7 @@ a {
 
 .service-section {
   color: white;
-  background: url('../img/downloads-bg.jpg') no-repeat center center scroll;
+  background: url('../img/buildings_bg1.jpg') no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
